# ProFiT

./: .gitignore  GEMINI.md  README.md  config.yaml  main.py  pyproject.toml  specifications.md  strategy.md
profit/: __init__.py  analysis.py  batch.py  config.py  io.py  metrics.py  optimizer.py  results.py  seed_strategies.py  strategy.py
profit/backtester/: base.py  expression_parser.py  lucit_adapter.py  results.py  vectorized.py
profit/data/: provider.py
profit/ga/: crossover.py  individual.py  mutation.py  selection.py
profit/indicators/: factory.py
profit/llm/: client.py
runs/my_first_run/strategies/: strategy_1.txt  strategy_2.txt  strategy_3.txt  strategy_4.txt  strategy_5.txt
tests/: config.yaml  test_config.py  test_extensibility.py  test_metrics.py  test_optimizer.py  test_provider.py  test_results.py  test_strategy.py
tests/backtester/: test_vectorized.py  test_vectorized_json_strategy.py
tests/data/: Bitcoin_historical_data_coinmarketcap.csv  bad_columns.csv  bad_index_no_date.csv  long_sample_data.csv  sample_data.csv  sample_data.parquet
tests/ga/: test_operators.py  test_selection.py
tests/indicators/: test_factory.py
tests/llm/: test_client.py
