[project]
name = "codespaces-blank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonpatch>=1.33",
    "matplotlib>=3.10.7",
    "mypy>=1.19.0",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.240712",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "pyyaml>=6.0.3",
    "types-PyYAML>=6.0.12.20240712",
    "ray>=2.52.1",
    "ruff>=0.14.7",
]

[tool.setuptools.packages.find]
include = ["profit*"]
exclude = ["tests*"]

[tool.mypy]
ignore_missing_imports = true
